PIP-363 Convert JIRA client to use snomed-parent bom and upgrade java to 17